# MatterLab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Application.h  RandomGenerator.h  Utils.cpp  Utils.h
src/io/: VTKExporter.h
src/physics/: ISolver.h  Material.h
src/physics/solvers/: CFDSolver.h  CoupledHeatSimulator.h  FEMSolver.h  FluidConvectionSimulator.h  FluidMechanicsSolver.h  GasDynamicsSimulator.h  OrbitalMechanicsSimulator.h  PhaseChangeSimulator.h  PipeFlowSimulator.h  ProjectileMotionSimulator.h  ShockWaveSolver.h  SolidMechanicsSolver.h  ThermalConductivitySimulator.h
src/visualization/: VectorField.h
tests/: CMakeLists.txt  test_stability.cpp
